--- a/5_latest_covid_cases_nobanks.Rmd
+++ b/5_latest_covid_cases_nobanks.Rmd
@@ -583,13 +583,92 @@ housing <-
   mutate(geographic_area_name = str_trim(geographic_area_name, side = "both"))
          
 
-most_recent <- readRDS('most_recent_zip_nobanks_1118.rds')
+most_recent <- readRDS('most_recent_zip_nobanks_1129.rds')
 
 most_recent_housing <- left_join(most_recent, housing, 
                                  by = c("zip" = "geographic_area_name")) %>%
+  mutate(renter_percent = as.double(renter_percent)) %>%
+  drop_na(renter_percent)
+
+
+
+```
+```{r}
+
+# Adding lender counts for everything lol
+
+most_recent <- readRDS('most_recent_zip_1129.rds')
+
+most_recent_housing <- left_join(most_recent, housing, 
+                                 by = c("zip" = "geographic_area_name")) %>%
+  mutate(renter_percent = as.double(renter_percent)) %>%
+  drop_na(renter_percent)
+```
+
+```{r}
+most_recent <- readRDS('most_recent_zip_withcounties_1130.rds')
+
+most_recent_housing <- left_join(most_recent, housing, 
+                                 by = c("zip" = "geographic_area_name")) %>%
+  mutate(renter_percent = as.double(renter_percent)) %>%
+  drop_na(renter_percent)
+```
+
+```{r}
+most_recent <- readRDS('most_recent_zip_withcounties_nobanks_1130.rds')
+
+most_recent_housing <- left_join(most_recent, housing, 
+                                 by = c("zip" = "geographic_area_name")) %>%
+  mutate(renter_percent = as.double(renter_percent)) %>%
+  drop_na(renter_percent)
+```
+
+```{r}
+most_recent <- readRDS('most_recent_zip_banksmatched_1129.rds')
+
+most_recent_housing <- left_join(most_recent, housing, 
+                                 by = c("zip" = "geographic_area_name")) %>%
+  mutate(renter_percent = as.double(renter_percent)) %>%
+  drop_na(renter_percent)
+```
+
+```{r}
+
+# Adding in renters on county level
+
+housing_county <- 
+  read_csv('raw_data/county/ACSDP5Y2018.DP04_data_with_overlays_2020-11-23T151752.csv',
+           skip = 1, col_types = cols()) %>%
+  clean_names() %>%
+  select(id,
+         percent_estimate_housing_tenure_occupied_housing_units_renter_occupied) %>%
+  rename("renter_percent" = 
+           "percent_estimate_housing_tenure_occupied_housing_units_renter_occupied") %>%
+  mutate(fips = str_sub(id, start = 10)) %>%
+  select(-id) %>%
+  mutate(renter_percent = as.double(renter_percent)) %>%
+  drop_na(renter_percent)
+```
+```{r}
+most_recent_county <- readRDS('most_recent_county_1130.rds')
+
+most_recent_county_housing <- left_join(most_recent_county,
+                                        housing_county,
+                                        by = "fips") %>%
+  drop_na(renter_percent)
+```
+
+```{r}
+most_recent_county <- readRDS('most_recent_county_nobanks_1130.rds')
+
+most_recent_county_housing <- left_join(most_recent_county,
+                                        housing_county,
+                                        by = "fips") %>%
   drop_na(renter_percent)
 
 ```
+
+
 ```{r}
 
 # Adding in loan counts even though idt they matter lol
