--- a/5_latest_covid_cases_nobanks.Rmd
+++ b/5_latest_covid_cases_nobanks.Rmd
@@ -632,41 +632,7 @@ most_recent_housing <- left_join(most_recent, housing,
   drop_na(renter_percent)
 ```
 
-```{r}
 
-# Adding in renters on county level
-
-housing_county <- 
-  read_csv('raw_data/county/ACSDP5Y2018.DP04_data_with_overlays_2020-11-23T151752.csv',
-           skip = 1, col_types = cols()) %>%
-  clean_names() %>%
-  select(id,
-         percent_estimate_housing_tenure_occupied_housing_units_renter_occupied) %>%
-  rename("renter_percent" = 
-           "percent_estimate_housing_tenure_occupied_housing_units_renter_occupied") %>%
-  mutate(fips = str_sub(id, start = 10)) %>%
-  select(-id) %>%
-  mutate(renter_percent = as.double(renter_percent)) %>%
-  drop_na(renter_percent)
-```
-```{r}
-most_recent_county <- readRDS('most_recent_county_1130.rds')
-
-most_recent_county_housing <- left_join(most_recent_county,
-                                        housing_county,
-                                        by = "fips") %>%
-  drop_na(renter_percent)
-```
-
-```{r}
-most_recent_county <- readRDS('most_recent_county_nobanks_1130.rds')
-
-most_recent_county_housing <- left_join(most_recent_county,
-                                        housing_county,
-                                        by = "fips") %>%
-  drop_na(renter_percent)
-
-```
 
 
 ```{r}
@@ -714,7 +680,7 @@ ownership <-
          fips = str_sub(id, 10)) %>%
   select(-Total, -Minority, -id)
 
-# Let's create a county level estimate, like we do for crime
+# Let's create a county level estimate, like we do for crime -- don't do this
 
 county_zip_crosswalk <- read_excel('raw_data/crosswalks/COUNTY_ZIP_092020.xlsx') %>%
   clean_names() %>%
